# OcafCAD

./: .gitignore  CMakeLists.txt  refactor_ideas.txt
src/GeometryCore/: CMakeLists.txt  GeometryCore.cpp  GeometryCore.hpp
src/GeometryCore/GeometryEvents/: CMakeLists.txt  GeometryEventSource.cpp  GeometryEventSource.hpp  GeometryObserver.hpp
src/GeometryCore/GeometryObject/: CMakeLists.txt  GeometryObject.cpp  GeometryObject.hpp  ShapeIds.hpp
src/GeometryCore/Part/: CMakeLists.txt  Part.cpp  PartLabelKey.cpp
src/GeometryCore/Transfer/: CMakeLists.txt
src/GeometryCore/Transfer/Import/: AbstractImporter.hpp  CMakeLists.txt  STEPImporter.cpp  STEPImporter.hpp  STEPImporterExceptions.hpp
src/GeometryCore/Utils/: CMakeLists.txt  OccProgressScopeWrapper.cpp  OccProgressScopeWrapper.hpp
src/GeometryCore/View/: AbstractGeometryView.hpp  CMakeLists.txt  GeometryView.cpp  GeometryView.hpp
src/MeshCore/: CMakeLists.txt  MeshCore.hpp
src/MeshCore/MeshEngine/: AbstractMeshEngine.hpp  CMakeLists.txt
src/MeshCore/MeshEngine/AbstractMeshEngine/: AbstractMeshEngine.hpp  CMakeLists.txt
src/MeshCore/MeshEngine/NetgenMeshEngine/: CMakeLists.txt  NetgenMeshEngine.cpp  NetgenMeshEngine.hpp  NetgenToVTK.cpp  NetgenToVTK.hpp
src/MeshCore/MeshObject/: CMakeLists.txt  DomainId.hpp  Mesh.hpp  MeshObject.cpp  MeshObject.hpp
src/MeshCore/MeshObject/Mesh/: CMakeLists.txt  Mesh.hpp  Mesh2D.hpp  Mesh3D.hpp  SurfaceMesh.hpp  VolumeMesh.hpp
src/MeshCore/MeshObject/MeshSettings/: CMakeLists.txt  GlobalMeshSettings.hpp  LocalMeshSettings.hpp  LocalSizing.hpp
src/OcafKernel/: CMakeLists.txt  CommandStack.hpp  OcafKernel.cpp  OcafKernel.hpp
src/OcafKernel/CommandStack/: CMakeLists.txt  CommandStack.cpp  CommandStack.hpp  DeltaPublisher.cpp  DeltaPublisher.hpp
src/OcafKernel/Document/: CMakeLists.txt  MainDocument.cpp  MainDocument.hpp  OcafKernel.hpp
src/OcafKernel/Document/DocumentCommands/: CMakeLists.txt  DeltaPublisher.cpp  DeltaPublisher.hpp  DocCommandStack.cpp  DocCommandStack.hpp
src/OcafKernel/Document/DocumentGeometry/: CMakeLists.txt  DocumentGeometry.cpp  DocumentGeometry.hpp
src/OcafKernel/Document/DocumentMesh/: CMakeLists.txt  DocumentMesh.hpp
src/OcafKernel/Document/DocumentTools/: CMakeLists.txt
src/OcafKernel/DocumentCommands/: AbstractDocCommandStack.hpp  CMakeLists.txt  DocCommandStack.cpp  DocCommandStack.hpp
src/OcafKernel/DocumentCommands/DocumentDeltaObserver/: AbstractDeltaObserver.hpp  PublisherDeltaObserver.cpp  PublisherDeltaObserver.hpp
src/OcafKernel/DocumentDeltaObserver/: CMakeLists.txt  PublisherDeltaObserver.cpp
src/OcafKernel/DocumentImport/: CMakeLists.txt  PartDocumentImporter.cpp  PartDocumentImporter.hpp  PartDocumentImporterExceptions.hpp
src/OcafKernel/DocumentTools/: OcafDocument.hpp
src/OcafKernel/Events/: CMakeLists.txt
src/OcafKernel/Events/DeltaEvents/: CMakeLists.txt
src/OcafKernel/Events/DocumentDeltaObservers/: CMakeLists.txt  DeltaObservers.hpp  GeometryDeltaObserver.cpp  GeometryDeltaObserver.hpp
src/OcafKernel/OcafKernelEvents/: AbstractOcafKernelObserver.hpp  AbstractOcafKernelPublisher.hpp  CMakeLists.txt  IdleOcafKernelObserver.hpp  OcafKernelConnections.hpp  OcafKernelEventTypes.hpp  OcafKernelPublisherAdapter.hpp  OcafKernelSignalPublisher.hpp
src/OcafKernel/OcafKernelMessaging/: AbstractOcafKernelObserver.hpp  AbstractOcafKernelPublisher.hpp  CMakeLists.txt  SignalOcafKernelPublisher.cpp  SignalOcafKernelPublisher.hpp
src/OcafKernel/OcafKernelMessaging/OcafKernelEvents/: AssemblyEvents.hpp  BaseOcafKernelEvent.hpp  CMakeLists.txt  OcafKernelEvents.hpp  PartEvents.hpp  PrototypeEvents.hpp
src/OcafKernel/Part/: CMakeLists.txt  Part.cpp  Part.hpp  PartDocumentTool.hpp  PartLabelKey.hpp  PartView.hpp
src/OcafKernel/Part/PartAttributes/: Location.hpp  PartPrototype.hpp
src/OcafKernel/Part/PartLabel/: CMakeLists.txt  PartLabel.cpp  PartLabel.hpp
src/OcafKernel/Part/PartTools/: AbstractPartGeometryTool.hpp  CMakeLists.txt  PartTools.hpp
src/OcafKernel/PartDocument/: CMakeLists.txt  PartDocument.cpp  PartDocument.hpp  PartDocumentRegistry.hpp
src/OcafKernel/PartDocument/Part/: Part.cpp  Part.hpp  PartView.hpp
src/OcafKernel/PartDocument/PartDocTools/: CMakeLists.txt
src/OcafKernel/PartDocument/PrototypeRegistry/: PrototypeRegistry.cpp  PrototypeRegistry.hpp
src/OcafKernel/PartDocument/RootAssembly/: CMakeLists.txt  RootAssembly.cpp  RootAssembly.hpp
src/Tools/: CMakeLists.txt
src/Tools/FileUtils/: AbstractInputSource.hpp  CMakeLists.txt  FileSource.hpp  PathUtils.cpp  PathUtils.hpp
src/Tools/MathUtils/: CMakeLists.txt  Fraction.hpp
src/Tools/Messaging/: AbstractEvent.hpp  AbstractMessageBus.hpp  AbstractSubscription.hpp  CMakeLists.txt  MessagePublisher.hpp  MessageSubsciber.hpp  MessageSubscriber.hpp  SignalMessageBus.cpp  SignalMessageBus.hpp  SignalSubscription.hpp
src/Tools/Observers/: AbstractPublisher.hpp
src/Tools/OccTools/: CMakeLists.txt  OccProgressIndicator.cpp  OccProgressIndicator.hpp
src/Tools/Progress/: AbstractProgressPublisher.hpp  AbstractProgressScope.hpp  CMakeLists.txt  EventProgressPublisher.cpp  EventProgressPublisher.hpp  ProgressEvents.hpp  ProgressMessage.hpp  ProgressRange.cpp  ProgressRange.hpp  ProgressScopeId.hpp  PublisherProgressScope.cpp  PublisherProgressScope.hpp
tests/Legacy/GeometryCore/: CMakeLists.txt
tests/Legacy/GeometryCore/Fixtures/: CMakeLists.txt  StubGeometryObjects.hpp
tests/Legacy/GeometryCore/Transfer/: CMakeLists.txt
tests/integration/Fixtures/: CMakeLists.txt  GeometryCoreFixture.hpp  OcafKernelFixutre.hpp
tests/integration/Fixtures/Mocks/: MockGeometryObserver.hpp
tests/integration/Fixtures/Stubs/: GeometryFileSources.hpp
tests/integration/GeometryCore/: CMakeLists.txt  itImportSTEP.cpp  itStepImport.cpp
tests/integration/GeometryCore/Transfer/: CMakeLists.txt  itSTEPImport.cpp
tests/integration/MeshCore/: CMakeLists.txt
tests/unit/GeometryCore/: CMakeLists.txt
tests/unit/MeshCore/: CMakeLists.txt
tests/unit/OcafKernel/: CMakeLists.txt  utRunOcafKernel.cpp
tests/unit/Tools/: CMakeLists.txt
(+311 files in other folders)
